# cpplings

./: .gitattributes  .gitignore  LICENSE  README.md  cpplings-unix.sh  cpplings-windows.bat  pyproject.toml
.github/workflows/: ci.yml
cpplings/: __init__.py  __main__.py  app_state.py  cli.py  info_file.py  runner.py  toolchain.py  watch.py
cpplings/data/: cpplings_test.hpp  info.toml
cpplings/data/exercises/00_intro/: README.md  intro1.cpp  intro2.cpp
cpplings/data/exercises/01_variables/: README.md  variables1.cpp  variables2.cpp  variables3.cpp  variables4.cpp  variables5.cpp  variables6.cpp  variables_challenge.cpp
cpplings/data/exercises/02_io/: README.md  io1.cpp  io2.cpp  io3.cpp  io_challenge.cpp
cpplings/data/exercises/03_operators/: README.md  operators1.cpp  operators2.cpp  operators3.cpp  operators4.cpp  operators_challenge.cpp
cpplings/data/exercises/04_conditionals/: README.md  conditionals1.cpp  conditionals2.cpp  conditionals3.cpp  conditionals4.cpp  conditionals_challenge.cpp
cpplings/data/exercises/05_loops/: README.md  loops1.cpp  loops2.cpp  loops3.cpp  loops4.cpp  loops_challenge.cpp
cpplings/data/exercises/06_functions/: README.md  functions1.cpp  functions2.cpp  functions3.cpp  functions4.cpp  functions_challenge.cpp
cpplings/data/exercises/07_arrays/: README.md  arrays1.cpp  arrays2.cpp  arrays3.cpp  arrays_challenge.cpp
cpplings/data/exercises/08_strings/: README.md  strings1.cpp  (+3 more)
cpplings/tui/: __init__.py  app.py  flavor.py
tests/: test_app_state.py  test_cli.py  test_info_file.py  test_runner.py  test_toolchain.py
(+230 files in other folders)
